# physscope

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: compile_options.cmake  fetchdependencies.cmake  fetchpolyscope.cmake  fetchvcpkg.cmake
physcope/chapters/: CMakeLists.txt  template.cpp
physcope/engine/: CMakeLists.txt  application.cpp  application.hpp  geometry.cpp  geometry.hpp  io.cpp  io.hpp  semaphore.cpp  semaphore.hpp
physcope/engine/shapes/: uv_sphere.hpp
physscope/chapters/: CMakeLists.txt  template.cpp
physscope/chapters/02_basic_simulation/: main.cpp
physscope/chapters/chapter2/: chapter2b.cpp
physscope/engine/: CMakeLists.txt  application.cpp  application.hpp  geometry.cpp  geometry.hpp  io.cpp  io.hpp  semaphore.cpp  semaphore.hpp
physscope/engine/shapes/: uv_sphere.hpp
scripts/: obj_to_str.py
src/: application.cpp  application.hpp  main.cpp  semaphore.hpp
src/chapters/: CMakeLists.txt  template.cpp
src/engine/: CMakeLists.txt  application.cpp  application.hpp  io.cpp  io.hpp  semaphore.cpp
